// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrayOfMedia should match the normalizr-arrayOfMedia-schema 1`] = `
ArraySchema {
  "schema": EntitySchema {
    "_getId": [Function],
    "_idAttribute": "id",
    "_key": "media",
    "_mergeStrategy": [Function],
    "_processStrategy": [Function],
    "schema": Object {
      "owner": EntitySchema {
        "_getId": [Function],
        "_idAttribute": "id",
        "_key": "users",
        "_mergeStrategy": [Function],
        "_processStrategy": [Function],
        "schema": Object {},
      },
    },
  },
}
`;

exports[`media schema should match the normalizr-media-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_idAttribute": "id",
  "_key": "media",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {
    "owner": EntitySchema {
      "_getId": [Function],
      "_idAttribute": "id",
      "_key": "users",
      "_mergeStrategy": [Function],
      "_processStrategy": [Function],
      "schema": Object {},
    },
  },
}
`;
